# playground

./: .air.toml  .editorconfig  .gitattributes  .gitignore  .goreleaser.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  LLM.md  Makefile  README.md  README.server.md  SECURITY.md  SUPPORT.md  VERSION  build-single-binary  build-single-binary.sh  go.mod  hanzo.toml  railway.json
.github/: BRANCH_PROTECTION.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md  task.md
.github/workflows/: ai-label.yml  contributor-reminders.yml  control-plane.yml  debug-iam-validation.yml  deploy.yml  docker.yml  e2e-tests.yml  functional-tests.yml  k8s-agent-connection-check.yml  k8s-agent-debug.yml  k8s-check-vnc-logs.yml  k8s-cleanup-agents.yml  k8s-cloud-debug.yml  k8s-diagnostic.yml  k8s-fix-netpol.yml  k8s-fix-vnc.yml  k8s-full-logs.yml  k8s-gateway-debug.yml  k8s-gw-logs.yml  k8s-gw-vnc-logs.yml  k8s-iam-debug.yml  k8s-reprovision-test.yml  k8s-restart-bot.yml  k8s-rfb-test.yml  k8s-test-iam-import.yml  k8s-update-console-iam.yml  k8s-vnc-deadlock-test.yml  k8s-vnc-deep-debug.yml  k8s-vnc-deep-fix.yml  k8s-vnc-detailed-debug.yml  k8s-vnc-diag.yml  k8s-vnc-fix-nowsock.yml  k8s-vnc-fix.yml  k8s-vnc-force-start.yml  k8s-vnc-operative-debug.yml  k8s-vnc-patch-live.yml  k8s-vnc-quick-check.yml  k8s-vnc-registry-debug.yml  k8s-vnc-restart-e2e.yml  k8s-vnc-restart-test.yml  (+14 more)
cmd/playground/: main.go
cmd/playground-server/: main.go  main_test.go
config/: agents.yaml  docker-perf.yaml
control-plane/: .env.dev  .env.example  .golangci.yml  README.md  build-single-binary  build-single-binary.sh  dev.sh  go.mod  go.sum  hanzo.toml
control-plane/migrations/: 000_migration_runner.sql  005_create_workflow_vcs.sql  007_add_storage_uri_to_workflow_vcs.sql  007_workflow_execution_indexes.sql  008_fix_agentfield_server_id_schema.sql  009_add_notes_to_workflow_executions.sql  011_create_workflow_runs_and_steps.sql  013_workflow_execution_state.sql  014_add_state_tracking_to_workflow_runs.sql  015_add_serverless_support_to_agent_nodes.sql  018_rename_agent_to_hanzo.sql  020_create_chat_messages.sql  021_create_tasks.sql  README.md
control-plane/scripts/: .version  README.md  quick-mcp-test.sh  release.sh  test-mcp-endpoints.sh
deployments/: README.md
deployments/docker/: Dockerfile  Dockerfile.agent  Dockerfile.control-plane  Dockerfile.demo-go-agent  Dockerfile.demo-python-agent  Dockerfile.go-agent  Dockerfile.python-agent  README.md  agent-entrypoint.sh  compose.yml  docker-compose.yml
deployments/k8s/: playground-pdb.yaml
deployments/kubernetes/: README.md
deployments/railway/: README.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  ENVIRONMENT_VARIABLES.md  PRD_GO_SDK_CLI.md  RELEASE.md
docs/prd/: DISCOVERY_API_CONTROL_PLANE.md
examples/: README.md
examples/benchmarks/: baseline.json
examples/go_agent_nodes/: go.mod  main.go
examples/go_bots/: go.mod  main.go
examples/ts-node-examples/: package-lock.json  package.json  tsconfig.json  tsup.config.ts
internal/application/: container.go  container_test.go
internal/cli/: add.go  config.go  init.go  init_test.go  list.go  logs.go  mcp.go  root.go  root_test.go  stop.go  uninstall.go  utils.go  vc.go  vc_verification_enhanced.go  version.go
internal/cloud/: k8s_client.go  provisioner.go  visor_client.go
internal/config/: cloud.go  config.go  package_config_test.go
internal/embedded/: ui.go
internal/encryption/: encryption_test.go
internal/events/: agent_events.go  agent_events_test.go  events_test.go  execution_events.go  node_events.go  space_events.go
internal/gitops/: handlers.go  manager.go  (+3 more)
migrations/: 001_create_did_registry.sql  002_create_agent_dids.sql  003_create_component_dids.sql  004_create_execution_vcs.sql  006_add_composite_indexes.sql  006_add_storage_uri_to_execution_vcs.sql  007_workflow_execution_indexes.sql  010_workflow_execution_composite_indexes.sql  012_create_execution_webhook_events.sql  019_create_spaces.sql
scripts/: build-all.sh  bump_version.py  install-dev-deps.sh  install.ps1  install.sh  seed_workflows.py  test-all.sh  test-mcp-endpoints.sh  uninstall.sh  version-manager.sh
sdk/python/: MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt
sdk/python/agentfield/: __init__.py  types.py
sdk/python/playground/: README_stdio_bridge.md  __init__.py  agent.py  agent_ai.py  agent_cli.py  agent_field_handler.py  agent_mcp.py  agent_server.py  agent_workflow.py  async_config.py  async_execution_manager.py  bot.py  bot_ai.py  bot_cli.py  bot_field_handler.py  bot_mcp.py  bot_registry.py  bot_server.py  bot_utils.py  bot_workflow.py  client.py  connection_manager.py  decorators.py  did_manager.py  dynamic_skills.py  execution_context.py  http_connection_manager.py  logger.py  mcp_client.py  mcp_stdio_bridge.py  media_providers.py  memory.py  memory_events.py  multimodal_response.py  pydantic_utils.py  rate_limiter.py  router.py  status.py  types.py  vc_generator.py  (+1 more)
sdk/python/tests/: README.md  conftest.py  helpers.py  test_agent_ai.py  test_agent_ai_comprehensive.py  test_agent_call.py  test_agent_cli.py  test_agent_core.py  test_agent_field_handler.py  test_agent_helpers.py  test_agent_integration.py  test_agent_networking.py  test_agent_registry.py  test_agent_resilience.py  test_agent_server.py  test_agent_utils.py  test_agent_workflow.py  test_agent_workflow_registration.py  test_ai_config.py  test_async_config.py  test_async_execution.py  test_async_execution_manager_comprehensive.py  test_async_execution_manager_paths.py  test_client.py  test_client_auth.py  test_client_execution_paths.py  test_client_lifecycle.py  test_client_unit.py  test_connection_manager.py  test_decorators.py  test_did_manager.py  test_dynamic_skills.py  test_execution_context_core.py  test_execution_state.py  test_http_connection_manager.py  test_litellm_adapters.py  test_mcp_client.py  test_media_providers.py  test_memory_client_core.py  test_memory_events.py  (+15 more)
sdk/python/tests/integration/: conftest.py  test_playground_end_to_end.py
(+1456 files in other folders)
