[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hanzo-playground"
version = "0.1.41-rc.40"
description = "Python SDK for the Playground control plane"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Playground Maintainers"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests>=2.28",
    "pydantic>=2.0",
    "litellm",
    "psutil",
    "PyYAML>=6.0",
    "aiohttp>=3.8",
    "websockets",
    "fal-client>=0.5.0"
]
keywords = ["playground", "sdk", "agents"]

[project.urls]
Homepage = "https://github.com/hanzoai/playground"
Documentation = "https://github.com/hanzoai/playground/tree/main/docs"
Issues = "https://github.com/hanzoai/playground/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["playground*"]
exclude = ["tests*", "examples*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
    "pytest-asyncio>=0.21,<0.24",
    "pytest-cov>=4.1,<5",
    "responses>=0.23,<0.26",
    "respx>=0.20,<0.22",
    "freezegun>=1.2,<2",
    "syrupy>=4,<5",
    "hypothesis>=6.88,<7",
    "pytest-socket>=0.6,<0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "smoke: fast sanity checks",
    "functional: end-to-end behavior within SDK boundaries",
    "contract: API/interface stability tests",
    "unit: isolated unit tests",
    "integration: tests that can touch network/services",
    "mcp: tests that exercise MCP/network interactions"
]
addopts = "-ra -q -m \"not mcp\" --strict-markers --strict-config --cov=playground.client --cov=playground.bot_field_handler --cov=playground.execution_context --cov=playground.execution_state --cov=playground.memory --cov=playground.rate_limiter --cov=playground.result_cache --cov-report=term-missing:skip-covered"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["playground"]
omit = [
    "playground/bot_mcp.py",
    "playground/dynamic_skills.py",
    "playground/mcp_client.py",
    "playground/mcp_manager.py",
    "playground/mcp_stdio_bridge.py",
    "playground/logger.py",
    "playground/types.py",
]
