[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hanzo-playground"
version = "0.1.41-rc.139"
description = "Python SDK for the Playground control plane"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Playground Maintainers"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115,<0.129",
    "uvicorn>=0.34,<0.42",
    "requests>=2.32,<2.33",
    "pydantic>=2.10,<2.13",
    "hanzo-llm>=1.55,<1.82",
    "psutil>=5.9,<7.3",
    "PyYAML>=6.0,<6.1",
    "aiohttp>=3.8,<3.14",
    "websockets>=12.0,<17",
    "fal-client>=0.5.0,<0.14",
]
keywords = ["playground", "sdk", "agents"]

[project.urls]
Homepage = "https://github.com/hanzoai/playground"
Documentation = "https://github.com/hanzoai/playground/tree/main/docs"
Issues = "https://github.com/hanzoai/playground/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["playground*"]
exclude = ["tests*", "examples*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<8.4",
    "pytest-asyncio>=0.23,<0.24",
    "pytest-cov>=4.1,<4.2",
    "responses>=0.25,<0.26",
    "respx>=0.21,<0.22",
    "freezegun>=1.5,<1.6",
    "syrupy>=4.8,<4.9",
    "hypothesis>=6.131,<6.142",
    "pytest-socket>=0.7,<0.8",
    "ruff>=0.15,<0.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "smoke: fast sanity checks",
    "functional: end-to-end behavior within SDK boundaries",
    "contract: API/interface stability tests",
    "unit: isolated unit tests",
    "integration: tests that can touch network/services",
    "mcp: tests that exercise MCP/network interactions"
]
addopts = "-ra -q -m \"not mcp\" --strict-markers --strict-config --cov=playground.client --cov=playground.bot_field_handler --cov=playground.execution_context --cov=playground.execution_state --cov=playground.memory --cov=playground.rate_limiter --cov=playground.result_cache --cov-report=term-missing:skip-covered"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.coverage.run]
source = ["playground"]
omit = [
    "playground/bot_mcp.py",
    "playground/dynamic_skills.py",
    "playground/mcp_client.py",
    "playground/mcp_manager.py",
    "playground/mcp_stdio_bridge.py",
    "playground/logger.py",
    "playground/types.py",
]
